# DataAnalysis_and_PowerBi_DashBoard

./: README.md  pyproject.toml
cleaning_dataset/: insights.py  regressions.py
cleaning_dataset/Clients/: ClientProcessingCleaning.py
cleaning_dataset/Services/: ServiceCleaning.py
tests/: test_dataframes.py
utils/data/: Reporte inicial propiedades.pbix  dataframe_metrics_describe.csv  dataset_filtrado_Bsas Gba Norte_$_alquiler.csv  dataset_filtrado_Capital Federal_$_alquiler.csv
