[tool.poetry]
name = "cleaning_dataset"
version = "0.1.0"
description = ""
authors = ["largolo <lucianoagustinargolo@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
scipy = "^1.10.0"
ipykernel = "^6.20.2"
pandas = "^1.5.2"
matplotlib = "^3.6.3"
seaborn = "^0.12.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
